--- a/FlappyFabian/app/src/main/res/layout/content_start_menu.xml
+++ b/FlappyFabian/app/src/main/res/layout/content_start_menu.xml
@@ -12,8 +12,32 @@
     tools:context="com.example.flappyfabian.StartMenu"
     tools:showIn="@layout/activity_start_menu">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="@string/StartGame"
+        android:id="@+id/Play_game"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="22dp"
+        android:clickable="true"
+        android:onClick="StartGame()" />
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/HelpMenu"
+        android:id="@+id/help"
+        android:layout_centerVertical="true"
+        android:layout_alignStart="@+id/Play_game" />
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/SettingsButn"
+        android:id="@+id/settings"
+        android:layout_below="@+id/Play_game"
+        android:layout_alignStart="@+id/Play_game"
+        android:layout_marginTop="62dp"
+        android:onClick="settings()" />
 </RelativeLayout>
