--- a/FlappyFabian/app/src/main/res/layout/content_start_menu.xml
+++ b/FlappyFabian/app/src/main/res/layout/content_start_menu.xml
@@ -10,34 +10,61 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.flappyfabian.StartMenu"
-    tools:showIn="@layout/activity_start_menu">
+    tools:showIn="@layout/activity_start_menu"
+    android:background="@drawable/Bakgrund"
+    >
+
 
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/StartGame"
+        android:textSize="32sp"
         android:id="@+id/Play_game"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="22dp"
         android:clickable="true"
-        android:onClick="StartGame()" />
+        android:onClick="StartGame()"
+        android:fontFamily="Tahoma"
+        android:layout_alignBottom="@+id/settings"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="74dp"
+        android:background="#32CD32"/>
 
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/HelpMenu"
+        android:textSize="32sp"
+        android:fontFamily="Tahoma"
         android:id="@+id/help"
-        android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/Play_game" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="140dp"
+        android:background="#32CD32"/>
 
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/SettingsButn"
+        android:fontFamily="Tahoma"
+        android:textSize="32sp"
         android:id="@+id/settings"
-        android:layout_below="@+id/Play_game"
-        android:layout_alignStart="@+id/Play_game"
-        android:layout_marginTop="62dp"
-        android:onClick="settings()" />
+        android:onClick="settings()"
+        android:layout_above="@+id/help"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="25dp"
+        android:background="#32CD32"/>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:textAllCaps="true"
+        android:textSize="60sp"
+        android:textColor="#ff4be5"
+        android:gravity="center"
+        android:layout_marginBottom="23dp"
+        android:layout_above="@+id/Play_game"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
