--- a/FlappyFabian/app/src/main/res/layout/content_settings.xml
+++ b/FlappyFabian/app/src/main/res/layout/content_settings.xml
@@ -12,4 +12,18 @@
     tools:context="com.example.flappyfabian.Settings"
     tools:showIn="@layout/activity_settings">
 
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/StartGame"
+        android:textSize="32sp"
+        android:id="@+id/Play_game"
+        android:clickable="true"
+        android:onClick="StartGame()"
+        android:fontFamily="Tahoma"
+        android:layout_alignBottom="@+id/settings"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="74dp"
+        android:background="#32CD32"/>
+
 </RelativeLayout>
