--- a/FlappyFabian/app/src/main/res/layout/content_start_menu.xml
+++ b/FlappyFabian/app/src/main/res/layout/content_start_menu.xml
@@ -11,7 +11,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.flappyfabian.StartMenu"
     tools:showIn="@layout/activity_start_menu"
-    android:background="@drawable/Bakgrund"
+    android:background="@drawable/bakgrund"
     >
 
 
@@ -30,16 +30,17 @@
         android:background="#32CD32"/>
 
     <Button
+        android:id="@+id/help"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/HelpMenu"
-        android:textSize="32sp"
-        android:fontFamily="Tahoma"
-        android:id="@+id/help"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="140dp"
-        android:background="#32CD32"/>
+        android:background="#32CD32"
+        android:fontFamily="Tahoma"
+        android:onClick="help()"
+        android:text="@string/HelpMenu"
+        android:textSize="32sp" />
 
     <Button
         android:layout_width="fill_parent"
